Added database connection, password hashing, refreshed gui elements

--- a/app/src/main/res/drawable/custom_edit_test_background.xml
+++ b/app/src/main/res/drawable/custom_edit_test_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="3sp"
-        android:color="@color/midinght_purple"/>
+        android:color="@color/white"/>
     <corners
         android:radius="25sp"/>
 </shape>
