--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -122,6 +122,7 @@
         />
 
     <TextView
+        android:id="@+id/loginFromRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/log_in_from_register"
