reformatted folder structure, added fragments for finances tab

--- a/app/src/main/res/layout/custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/custom_navigation_drawer.xml
@@ -63,6 +63,7 @@
             android:textSize="20sp"/>
 
         <TextView
+            android:id="@+id/financesTextView"
             android:clickable="true"
             android:focusable="true"
             android:layout_width="match_parent"
