--- a/app/src/main/res/layout/custom_income_recycle_view_item.xml
+++ b/app/src/main/res/layout/custom_income_recycle_view_item.xml
@@ -17,28 +17,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/incomeTypeImage"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="25dp"
         android:layout_centerVertical="true"
         android:text="Description"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:id="@+id/incomeAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/incomeTypeList"
-        android:layout_marginStart="30dp"
-        android:inputType="numberDecimal"
-        android:hint="Amount..."/>
+        android:layout_marginStart="25dp"
+        android:layout_centerVertical="true"
+        android:text="Amount" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/editIncomeItemBtn"
+        android:layout_width="60sp"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/incomeAmount"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/red"
+        android:layout_marginStart="25dp"
+        android:text="E"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/deleteIncomeItemBtn"
+        android:layout_width="60sp"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/editIncomeItemBtn"
+        android:layout_marginStart="10dp"
         android:text="X"
         android:textSize="20sp"
         android:textStyle="bold"/>
