--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -23,8 +23,16 @@
                 android:layout_width="0dp"
                 android:layout_height="45dp"
                 android:layout_weight="1"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="10dp"
                 android:spinnerMode="dropdown" />
+
+            <EditText
+                android:id="@+id/incomeAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:inputType="numberDecimal"
+                android:hint="Amount"/>
 
             <Button
                 android:id="@+id/addIncome"
@@ -33,8 +41,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:text="Add"
-                android:textStyle="bold"
-                android:gravity="end" />
+                android:textStyle="bold"/>
         </LinearLayout>
 
     </RelativeLayout>
@@ -49,7 +56,7 @@
             android:id="@+id/incomeList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
             android:text="Income list"
@@ -61,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="15dp" />
     </LinearLayout>
 
@@ -74,7 +81,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="10dp"
             android:text="Total income:"
             android:textStyle="bold"
             android:textSize="18sp"/>
