--- a/app/src/main/res/layout/custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/custom_navigation_drawer.xml
@@ -100,6 +100,7 @@
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/settingsTextView"
             android:clickable="true"
             android:focusable="true"
             android:layout_width="match_parent"
