--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".Fragments.ExpenseFragment">
+        tools:context=".Fragments.Finances.ExpenseFragment">
 
         <RelativeLayout
             android:layout_width="match_parent"
