--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragments.IncomeFragment">
+    tools:context=".Fragments.Finances.IncomeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
