added pie chart for expenses, showing the amount and the expense type

--- a/app/src/main/res/layout/fragment_pie_chart.xml
+++ b/app/src/main/res/layout/fragment_pie_chart.xml
@@ -47,7 +47,8 @@
             android:id="@+id/expensePieChart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_margin="20dp"/>
     </LinearLayout>
 
 </LinearLayout>
