added sliding panel for ai statistics and conversation placeholder

--- a/app/src/main/res/drawable/background_5.xml
+++ b/app/src/main/res/drawable/background_5.xml
@@ -5,7 +5,7 @@
             <gradient
                 android:angle="225"
                 android:startColor="@color/purple"
-                android:endColor="@color/midinght_purple"
+                android:endColor="@color/midnight_purple"
                 />
         </shape>
     </item>
