--- a/app/src/main/res/layout/activity_handle_user_sign_in.xml
+++ b/app/src/main/res/layout/activity_handle_user_sign_in.xml
@@ -2,13 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="350dp"
+    android:layout_height="350dp"
+    android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".Handlers.UserHandling.HandleUserSignIn">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Continue by using your google account?"
+        android:textSize="19sp"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/google_logo"/>
 
     <Button
         android:id="@+id/googleSignInBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="125dp"
+        android:text="Continue"
+        android:textSize="18sp"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
