--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/dark_gery"
+    android:background="@color/midnight_purple"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -25,7 +25,7 @@
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:padding="24dp"
-            android:background="@color/shaded_blue">
+            android:background="@color/purple">
 
             <TextView
                 android:id="@+id/loginTW"
