--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="orange">#d48849</color>
     <color name="red">#bd4545</color>
     <color name="purple">#6d1950</color>
-    <color name="midinght_purple">#20073a</color>
+    <color name="midnight_purple">#20073a</color>
     <color name="shaded_blue">#5baee5</color>
     <color name="grey">#c5d8e1</color>
     <color name="dark_gery">#334553</color>
