added functionality to the exchange module, created the currency conversion and a list containing most of the circulating currencies from around the world

--- a/app/src/main/res/layout/applist_main.xml
+++ b/app/src/main/res/layout/applist_main.xml
@@ -107,9 +107,10 @@
             app:cardCornerRadius="35dp">
 
             <TextView
+                android:id="@+id/appListExchangeOptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Currency exchange rates"
+                android:text="Currency exchange and rates"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textAlignment="center"
