--- a/app/src/main/res/layout/custom_debt_recycler_view_item.xml
+++ b/app/src/main/res/layout/custom_debt_recycler_view_item.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginBottom="15sp">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/debtTypeImage"
